--- a/config.toml
+++ b/config.toml
@@ -27,5 +27,15 @@ googleAnalytics = "UA-118364424-4"
         name = "linkedin"
         url = "https://www.linkedin.com/in/dariotarantini"
     [[params.social]]
+        name = "mail"
+        url = "mailto:dario@tarantini.dev"
+    [[params.social]]
         name = "telegram"
         url = "https://t.me/dariolol"
+
+    [params.style]
+        darkestColor = "#d35050"
+        darkColor = "#212121"
+        primaryColor = "#ffffff"
+        lightColor = "#a2a2a2"
+        lightestColor = "#d3d3d3"
